💄 scss stuff you know

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -4,3 +4,15 @@
 .aweHidden{
     opacity: 0;
 }
+
+.note_container{
+    margin-top: 50px;
+    .note{
+        max-width: 900px;
+        margin: 0 auto;
+    }
+}
+
+.home{
+    min-height: 100vh;
+}
