--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import 'react-toastify/dist/ReactToastify.css';
+
 body, html{
     padding: 0;
     margin: 0;
@@ -7,4 +9,7 @@ body, html{
 a{
     text-decoration: none;
     color: inherit;
+}
+*{
+    -webkit-tap-highlight-color: transparent;
 }
