--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,3 +14,12 @@ a{
 *{
     -webkit-tap-highlight-color: transparent;
 }
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
